--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #372879;
+  background-color: #20245A;
   
   
   /* radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
@@ -19,7 +19,7 @@ body {
   margin-top:-50px;
   right: 25px;
   color:white;
- background-color: #887ED8;
+ background-color: #464B8F;
  padding:5px;
  position: absolute;
  border:2px solid black;
@@ -232,7 +232,7 @@ i{
   color: white;
   text-align: center;
   border: 1px solid gey;
-  background: #463C93;
+  background: #464B8F;
   padding: 0;
 }
 
