--- a/cn/cn.css
+++ b/cn/cn.css
@@ -3,24 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 } 
-
-/* custom scroll bar */
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background: #433e5f;
-}
-
-::-webkit-scrollbar-thumb {
-  background: red;
-}
 body{
   
   overflow: scroll;
   
-  width:100%;
+  width:100vw;
     background-color: #151320;
     height: 100vh;
     font-family: 'Poppins',sans-serif;
@@ -44,7 +31,7 @@ body{
 .sems .active{
   
   animation: glow 1s ease-in-out infinite alternate;
-color:red;
+color: #6DE60D;
 font-weight: bolder;
 
   
@@ -70,7 +57,7 @@ font-weight: bolder;
   
 }
 .subactiv a{
-  color: red;
+  color: #6DE60D;
 }
 
 /* cards */
@@ -82,7 +69,7 @@ font-weight: bolder;
 } 
 .card{
    margin: 10px;
-    border:1px solid red;
+    border:1px solid #6DE60D;
     margin: 10px;
     margin-top: 20px;
     background-color: #1c1b29;
@@ -96,8 +83,7 @@ font-weight: bolder;
     height: 60vh;
 }
 textarea{
-  color: white;
-  
+  color:white;
   overflow-y: scroll;
   font-weight: bold;
   padding: 15px;
@@ -117,34 +103,43 @@ textarea{
     background-image: linear-gradient(
         135deg,
         #1c1b29,
-        #fa0808,
+        #151320,
         #151320
     );
   
   margin-left: 60%;
  
-} 
+} /*
+.container:after{
+    content:"";
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 20px 20px 0 0;
+    opacity: 0.7;
+} */
 .card1>.container textarea{
     background-image: linear-gradient(
-        165deg,
+           165deg,
         #1c1b29,
-       black
+       black, black
        
     );
     
 }
 .card2>.container textarea{
     background-image: linear-gradient(
-         165deg,
+       165deg,
         #1c1b29,
        black, black
-       
     );
       
 }
 .card3>.container textarea{
     background-image: linear-gradient(
-        165deg,
+           165deg,
         #1c1b29,
        black, black
     );
@@ -168,7 +163,7 @@ textarea{
 .upload a i{
   font-size: 30px;
   color: white;
-  background: red;
+  background: #6DE60D;
   padding:8px 10px;
   border-radius: 50%;
   position: fixed;
@@ -177,73 +172,69 @@ textarea{
   z-index: 1;
   
 }
+
+::selection {
+  color: white;
+  background:  #6DE60D;
+} 
 @media only screen and (min-width: 980px) {
 
- 
-.sems a {
+.sems button {
   border: none;
   background: none;
   height: 40px;
   text-decoration: none;
   padding: 6px;
-  color:grey;
-  font-size: 25px;
+  color: grey;
+  font-size: 35px;
   margin: 10px;
 }
 
-.sub a{
+.sub a {
   text-decoration: none;
-    font-weight: 1000;
+  font-weight: 1000;
   margin: 40px;
   background: none;
-  color:white;
-  border:none;
+  color: white;
+  border: none;
   font-size: 50px;
-  
-}
-
-.subactiv a{
-  color: red;
-}
-
-.card{
-   margin: 40px;
-    border:1px solid red;
-    
-    margin-top: 20px;
-    background-color: #1c1b29;
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.18);
-}
-
-.container{
- margin: 5px;
-    position: relative; 
-    clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%); 
-    height: 60vh;
 
 }
-.container textarea{
-font-size: 20px;
+
+.subactiv a {
+  color: #6DE60D;
 }
-.texts-btn{
-  font-size: 20px;
-  margin-top: -20px;
-  
-} 
-.upload a i{
-  font-size: 40px;
+
+.card {
+  margin: 40px;
+  border: 1px solid #6DE60D;
+
+  margin-top: 20px;
+  background-color: #1c1b29;
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
+}
+
+.container {
+  margin: 5px;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+  height: 60vh;
+}
+
+.upload a i {
+  font-size: 30px;
   color: white;
   background: red;
-  padding:8px 10px;
+  padding: 8px 10px;
   border-radius: 50%;
   position: fixed;
-  right:10%;
-  bottom:10%;
+  right: 10%;
+  bottom: 10%;
   z-index: 1;
 }
-}
-  .outline {
+} 
+.outline {
     display: none;
     background: #42445AAD;
     border-radius: 10px;
@@ -278,20 +269,14 @@ font-size: 20px;
 .no{
   background:#CA1D1DAD;
   border-radius: 5px;
-  
  
 }
 .yes{
   border-radius: 5px;
   
   background: #58CA1DAD;
-
 }
 
-::selection {
-  color: white;
-  background:  red;
-} 
 
 /* footer section styling */
 footer{
@@ -302,7 +287,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: red;
+    color: greenyellow;
     text-decoration: none;
 }
 footer span a:hover{
