--- a/java/cn.css
+++ b/java/cn.css
@@ -1,12 +1,16 @@
 *{
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 } 
-
+::selection {
+color: white;
+background:  rgba(80, 242, 10, 0.5);
+} 
 /* custom scroll bar */
 ::-webkit-scrollbar {
-width: 8px;
+width: 5px;
 }
 
 ::-webkit-scrollbar-track {
@@ -14,13 +18,13 @@ background: #433e5f;
 }
 
 ::-webkit-scrollbar-thumb {
-background: red;
+background: #55d925;
 }
 body{
 
 overflow: scroll;
 
-width:100%;
+width:100vw;
   background-color: #151320;
   height: 100vh;
   font-family: 'Poppins',sans-serif;
@@ -44,7 +48,7 @@ color:grey;
 .sems .active{
 
 animation: glow 1s ease-in-out infinite alternate;
-color:red;
+color: #6DE60D;
 font-weight: bolder;
 
 
@@ -70,7 +74,7 @@ font-size: 20px;
 
 }
 .subactiv a{
-color: red;
+color: #6DE60D;
 }
 
 /* cards */
@@ -82,7 +86,7 @@ color: red;
 } 
 .card{
  margin: 10px;
-  border:1px solid red;
+  border:1px solid #6DE60D;
   margin: 10px;
   margin-top: 20px;
   background-color: #1c1b29;
@@ -96,8 +100,7 @@ margin: 2px;
   height: 60vh;
 }
 textarea{
-color: white;
-
+color:white;
 overflow-y: scroll;
 font-weight: bold;
 padding: 15px;
@@ -117,34 +120,43 @@ color: white;
   background-image: linear-gradient(
       135deg,
       #1c1b29,
-      #fa0808,
+      #151320,
       #151320
   );
 
 margin-left: 60%;
 
-} 
+} /*
+.container:after{
+  content:"";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 20px 20px 0 0;
+  opacity: 0.7;
+} */
 .card1>.container textarea{
   background-image: linear-gradient(
-      165deg,
+         165deg,
       #1c1b29,
-     black
+     black, black
      
   );
   
 }
 .card2>.container textarea{
   background-image: linear-gradient(
-       165deg,
+     165deg,
       #1c1b29,
      black, black
-     
   );
     
 }
 .card3>.container textarea{
   background-image: linear-gradient(
-      165deg,
+         165deg,
       #1c1b29,
      black, black
   );
@@ -168,7 +180,7 @@ margin-left: 60%;
 .upload a i{
 font-size: 30px;
 color: white;
-background: red;
+background: #6DE60D;
 padding:8px 10px;
 border-radius: 50%;
 position: fixed;
@@ -177,70 +189,68 @@ bottom:10%;
 z-index: 1;
 
 }
-@media only screen and (min-width: 980px) {
-/*
 
-.sems a {
+::selection {
+color: white;
+background:  rgba(122, 242, 10,0.5);
+} 
+@media only screen and (min-width: 980px) {
+
+.sems button {
 border: none;
 background: none;
 height: 40px;
 text-decoration: none;
 padding: 6px;
-color:grey;
-
+color: grey;
+font-size: 35px;
 margin: 10px;
-} */
+}
 
-.sub a{
+.sub a {
 text-decoration: none;
-  font-weight: 1000;
+font-weight: 1000;
 margin: 40px;
 background: none;
-color:white;
-border:none;
+color: white;
+border: none;
 font-size: 50px;
 
 }
 
-.subactiv a{
-color: red;
+.subactiv a {
+color: #6DE60D;
 }
 
-.card{
- margin: 40px;
-  border:1px solid red;
-  
-  margin-top: 20px;
-  background-color: #1c1b29;
-  border-radius: 20px;
-  box-shadow: 0 0 30px rgba(0,0,0,0.18);
+.card {
+margin: 40px;
+border: 1px solid #6DE60D;
+
+margin-top: 20px;
+background-color: #1c1b29;
+border-radius: 20px;
+box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
 }
 
-.container{
+.container {
 margin: 5px;
-  position: relative; 
-  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%); 
-  height: 60vh;
-
+position: relative;
+clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+height: 60vh;
 }
 
-.texts-btn{
-font-size: 20px;
-margin-top: -20px;
-
-} 
-.upload a i{
-font-size: 40px;
+.upload a i {
+font-size: 30px;
 color: white;
 background: red;
-padding:8px 10px;
+padding: 8px 10px;
 border-radius: 50%;
 position: fixed;
-right:10%;
-bottom:10%;
+right: 10%;
+bottom: 10%;
 z-index: 1;
 }
-}
+} 
 .outline {
   display: none;
   background: #42445AAD;
@@ -277,19 +287,13 @@ z-index: 1;
 background:#CA1D1DAD;
 border-radius: 5px;
 
-
 }
 .yes{
 border-radius: 5px;
 
 background: #58CA1DAD;
-
 }
 
-::selection {
-color: white;
-background:  red;
-} 
 
 /* footer section styling */
 footer{
@@ -300,7 +304,7 @@ width: 100%;
   text-align: center;
 }
 footer span a{
-  color: red;
+  color: greenyellow;
   text-decoration: none;
 }
 footer span a:hover{
