--- a/style.css
+++ b/style.css
@@ -1,324 +1,324 @@
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 } 
 
 /* custom scroll bar */
 ::-webkit-scrollbar {
-  width: 8px;
+width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #433e5f;
+background: #433e5f;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: red;
+background: #6DE60D;
 }
 body{
-  
-  overflow: scroll;
-  
-  width:100%;
-    background-color: #151320;
-    height: 100vh;
-    font-family: 'Poppins',sans-serif;
+
+overflow: scroll;
+
+width:100%;
+  background-color: #151320;
+  height: 100vh;
+  font-family: 'Poppins',sans-serif;
 }
 /* sems */
 .sems {
-  color:white;
-  display:flex;
-  flex:wrap;
-  justify-content:center;
+color:white;
+display:flex;
+flex:wrap;
+justify-content:center;
 }
 .sems a{
-  border: none;
-  background: none;
-  height: 40px;
-  text-decoration: none;
-  padding: 6px;
-  color:grey;
+border: none;
+background: none;
+height: 40px;
+text-decoration: none;
+padding: 6px;
+color:grey;
 }
 
 .sems .active{
-  
-  animation: glow 1s ease-in-out infinite alternate;
-color:red;
+
+animation: glow 1s ease-in-out infinite alternate;
+color:#6DE60D;
 font-weight: bolder;
 
-  
+
 }
 /* subjects*/ 
 
 .sub{
-  
-  color:white;
-  display:flex;
-  flex:wrap;
-  justify-content:center;
-  
+
+color:white;
+display:flex;
+flex:wrap;
+justify-content:center;
+
 }
 .sub a{
-  text-decoration: none;
-    font-weight: 1000;
-  margin: 0 20px;
-  background: none;
-  color:white;
-  border:none;
-  font-size: 20px;
-  
+text-decoration: none;
+  font-weight: 1000;
+margin: 0 20px;
+background: none;
+color:white;
+border:none;
+font-size: 20px;
+
 }
 .subactiv a{
-  color: red;
+color: #6DE60D;
 }
 
 /* cards */
 
 .cards{ 
-    
-    margin: 10px; 
-    
+  
+  margin: 10px; 
+  
 } 
 .card{
-   margin: 10px;
-    border:1px solid red;
-    margin: 10px;
-    margin-top: 20px;
-    background-color: #1c1b29;
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.18);
+ margin: 10px;
+  border:1px solid #6DE60D;
+  margin: 10px;
+  margin-top: 20px;
+  background-color: #1c1b29;
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgba(0,0,0,0.18);
 }
 .container{
- margin: 2px;
-    position: relative; 
-    clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%); 
-    height: 60vh;
+margin: 2px;
+  position: relative; 
+  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%); 
+  height: 60vh;
 }
 textarea{
-  color: white;
-  
-  overflow-y: scroll;
-  font-weight: bold;
-  padding: 15px;
-   height: 100%;
-    width:100%;
-    display: block;
-    border-radius: 20px 20px 0 0;
+color: white;
+
+overflow-y: scroll;
+font-weight: bold;
+padding: 15px;
+ height: 100%;
+  width:100%;
+  display: block;
+  border-radius: 20px 20px 0 0;
 }
 .texts-btn{
-  border:0.5px solid ;
-  border-radius: 5px;
-    position: absolute;
-    
-  font-weight: bold;
-  padding:1px 4px;
-  color: white;
-    background-image: linear-gradient(
-        135deg,
-        #1c1b29,
-        #fa0808,
-        #151320
-    );
+border:0.5px solid ;
+border-radius: 5px;
+  position: absolute;
   
-  margin-left: 60%;
- 
+font-weight: bold;
+padding:1px 4px;
+color: white;
+  background-image: linear-gradient(
+      135deg,
+      #1c1b29,
+      #151320,
+      #151320
+  );
+
+margin-left: 60%;
+
 } 
 .card1>.container textarea{
-    background-image: linear-gradient(
-        165deg,
-        #1c1b29,
-       black
-       
-    );
-    
+  background-image: linear-gradient(
+      165deg,
+      #1c1b29,
+     black
+     
+  );
+  
 }
 .card2>.container textarea{
-    background-image: linear-gradient(
-         165deg,
-        #1c1b29,
-       black, black
-       
-    );
-      
+  background-image: linear-gradient(
+       165deg,
+      #1c1b29,
+     black, black
+     
+  );
+    
 }
 .card3>.container textarea{
-    background-image: linear-gradient(
-        165deg,
-        #1c1b29,
-       black, black
-    );
+  background-image: linear-gradient(
+      165deg,
+      #1c1b29,
+     black, black
+  );
 }
 .details{
-    padding: 20px 10px;
+  padding: 20px 10px;
 }
 .details>h3{
-  
-    color: #ffffff;
-    font-weight: 600;
-    font-size: 18px;
-    margin: 10px 0 15px 0;
+
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 18px;
+  margin: 10px 0 15px 0;
 }
 .details>p{
-    color: #a0a0a0;
-    font-size: 15px;
-    line-height: 30px;
-    font-weight: 400;
+  color: #a0a0a0;
+  font-size: 15px;
+  line-height: 30px;
+  font-weight: 400;
 }
 .upload a i{
-  font-size: 30px;
-  color: white;
-  background: red;
-  padding:8px 10px;
-  border-radius: 50%;
-  position: fixed;
-  right:10%;
-  bottom:10%;
-  z-index: 1;
-  
+font-size: 30px;
+color: white;
+background: #6DE60D;
+padding:8px 10px;
+border-radius: 50%;
+position: fixed;
+right:10%;
+bottom:10%;
+z-index: 1;
+
 }
 @media only screen and (min-width: 980px) {
 /*
- 
-.sems a {
-  border: none;
-  background: none;
-  height: 40px;
-  text-decoration: none;
-  padding: 6px;
-  color:grey;
 
-  margin: 10px;
+.sems a {
+border: none;
+background: none;
+height: 40px;
+text-decoration: none;
+padding: 6px;
+color:grey;
+
+margin: 10px;
 } */
 
 .sub a{
-  text-decoration: none;
-    font-weight: 1000;
-  margin: 40px;
-  background: none;
-  color:white;
-  border:none;
-  font-size: 50px;
-  
+text-decoration: none;
+  font-weight: 1000;
+margin: 40px;
+background: none;
+color:white;
+border:none;
+font-size: 50px;
+
 }
 
 .subactiv a{
-  color: red;
+color: #6DE60D;
 }
 
 .card{
-   margin: 40px;
-    border:1px solid red;
-    
-    margin-top: 20px;
-    background-color: #1c1b29;
-    border-radius: 20px;
-    box-shadow: 0 0 30px rgba(0,0,0,0.18);
+ margin: 40px;
+  border:1px solid #6DE60D;
+  
+  margin-top: 20px;
+  background-color: #1c1b29;
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgba(0,0,0,0.18);
 }
 
 .container{
- margin: 5px;
-    position: relative; 
-    clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%); 
-    height: 60vh;
+margin: 5px;
+  position: relative; 
+  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%); 
+  height: 60vh;
 
 }
 
 .texts-btn{
-  font-size: 20px;
-  margin-top: -20px;
-  
+font-size: 20px;
+margin-top: -20px;
+
 } 
 .upload a i{
-  font-size: 40px;
-  color: white;
-  background: red;
-  padding:8px 10px;
-  border-radius: 50%;
+font-size: 40px;
+color: white;
+background: #6DE60D;
+padding:8px 10px;
+border-radius: 50%;
+position: fixed;
+right:10%;
+bottom:10%;
+z-index: 1;
+}
+}
+.outline {
+  display: none;
+  background: #42445AAD;
+  border-radius: 10px;
+  margin: 20px;
   position: fixed;
-  right:10%;
-  bottom:10%;
+  top: 35%;
   z-index: 1;
-}
-}
-  .outline {
-    display: none;
-    background: #42445AAD;
-    border-radius: 10px;
-    margin: 20px;
-    position: fixed;
-    top: 35%;
-    z-index: 1;
-   text-align: center;
-    border: 2px solid ;
-    
-    
-  }
-  .outline p{
-    font-weight: bold;
-    color: white;
-    padding: 10px;
-    font-size: 25px;
-  }
-  .buttons{
-    display: flex;
-    justify-content: center;
-    
-  }
-  .buttons a button{
-    margin: 15px;
-    font-size: 20px;
-    color: white;
-    width:45px;
-    font-weight: bold;
-    
-  }
-.no{
-  background:#CA1D1DAD;
-  border-radius: 5px;
+ text-align: center;
+  border: 2px solid ;
   
- 
+  
+}
+.outline p{
+  font-weight: bold;
+  color: white;
+  padding: 10px;
+  font-size: 25px;
+}
+.buttons{
+  display: flex;
+  justify-content: center;
+  
+}
+.buttons a button{
+  margin: 15px;
+  font-size: 20px;
+  color: white;
+  width:45px;
+  font-weight: bold;
+  
+}
+.no{
+background:#CA1D1DAD;
+border-radius: 5px;
+
+
 }
 .yes{
-  border-radius: 5px;
-  
-  background: #58CA1DAD;
+border-radius: 5px;
+
+background: #58CA1DAD;
 
 }
 
 ::selection {
-  color: white;
-  background:  red;
+color: white;
+background:  #6DE60D;
 } 
 
 /* footer section styling */
 footer{
-  width: 100%;
-    background: #16161AA6;
-    padding: 15px 23px;
-    color: #fff;
-    text-align: center;
+width: 100%;
+  background: #16161AA6;
+  padding: 15px 23px;
+  color: #fff;
+  text-align: center;
 }
 footer span a{
-    color: red;
-    text-decoration: none;
-}
-footer span a:hover{
-    text-decoration: none;
-}
-.linkicon a{
+  color: #6DE60D;
   text-decoration: none;
 }
+footer span a:hover{
+  text-decoration: none;
+}
+.linkicon a{
+text-decoration: none;
+}
 .linkicon a i{
-  color:white;
-  margin: 10px;
-  font-size: 20px;
-  
+color:white;
+margin: 10px;
+font-size: 20px;
+
 }
 
 
 .linkicon a i:hover{
-  color:#763C32;
-  margin: 10px;
-  font-size: 20px;
+color:#763C32;
+margin: 10px;
+font-size: 20px;
 }
