--- a/java/cn.css
+++ b/java/cn.css
@@ -14,7 +14,7 @@ background: #433e5f;
 }
 
 ::-webkit-scrollbar-thumb {
-background: red;
+background: #6DE60D;
 }
 body{
 
@@ -44,7 +44,7 @@ color:grey;
 .sems .active{
 
 animation: glow 1s ease-in-out infinite alternate;
-color:red;
+color:#6DE60D;
 font-weight: bolder;
 
 
@@ -70,7 +70,7 @@ font-size: 20px;
 
 }
 .subactiv a{
-color: red;
+color: #6DE60D;
 }
 
 /* cards */
@@ -82,7 +82,7 @@ color: red;
 } 
 .card{
  margin: 10px;
-  border:1px solid red;
+  border:1px solid #6DE60D;
   margin: 10px;
   margin-top: 20px;
   background-color: #1c1b29;
@@ -117,7 +117,7 @@ color: white;
   background-image: linear-gradient(
       135deg,
       #1c1b29,
-      #fa0808,
+      #151320,
       #151320
   );
 
@@ -168,7 +168,7 @@ margin-left: 60%;
 .upload a i{
 font-size: 30px;
 color: white;
-background: red;
+background: #6DE60D;
 padding:8px 10px;
 border-radius: 50%;
 position: fixed;
@@ -203,12 +203,12 @@ font-size: 50px;
 }
 
 .subactiv a{
-color: red;
+color: #6DE60D;
 }
 
 .card{
  margin: 40px;
-  border:1px solid red;
+  border:1px solid #6DE60D;
   
   margin-top: 20px;
   background-color: #1c1b29;
@@ -232,7 +232,7 @@ margin-top: -20px;
 .upload a i{
 font-size: 40px;
 color: white;
-background: red;
+background: #6DE60D;
 padding:8px 10px;
 border-radius: 50%;
 position: fixed;
@@ -288,7 +288,7 @@ background: #58CA1DAD;
 
 ::selection {
 color: white;
-background:  red;
+background:  #6DE60D;
 } 
 
 /* footer section styling */
@@ -300,7 +300,7 @@ width: 100%;
   text-align: center;
 }
 footer span a{
-  color: red;
+  color: #6DE60D;
   text-decoration: none;
 }
 footer span a:hover{
